--- a/export.html
+++ b/export.html
@@ -2,227 +2,129 @@
 <html lang="es">
 <head>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Gastos 2N — Exportar</title>
-  <style>
-    :root{--bg:#0b0d12;--card:#121521;--ink:#e7ebf3;--muted:#8b92a7;--blue:#0a84ff;--line:#1e2230}
-    *{box-sizing:border-box}html,body{height:100%}body{margin:0;background:var(--bg);color:var(--ink);font:-apple-system,system-ui,Segoe UI,Roboto}
-    .top{position:sticky;top:0;display:flex;gap:8px;align-items:center;padding:12px 14px;border-bottom:1px solid var(--line);background:rgba(11,13,18,.75);backdrop-filter:saturate(180%) blur(16px);z-index:10}
-    .top h1{margin:0;font-size:17px;font-weight:600;letter-spacing:.2px}
-    .btn{border:1px solid var(--line);background:var(--card);color:var(--ink);border-radius:12px;padding:9px 12px;cursor:pointer}
-    .btn.primary{background:var(--blue);border:none}
-    .wrap{max-width:960px;margin:0 auto;padding:12px}
-    .card{background:var(--card);border:1px solid var(--line);border-radius:16px;padding:12px;margin:10px 0}
-    .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
-    label{color:var(--muted);font-size:12px}
-    input[type=month]{background:#0f1320;border:1px solid var(--line);border-radius:10px;padding:8px;color:var(--ink)}
-    .muted{color:var(--muted)}
-    canvas{max-width:100%}
-    .list{display:grid;grid-template-columns:1fr;gap:8px}
-    .item{display:flex;gap:10px;align-items:center;padding:8px;border:1px solid var(--line);border-radius:12px;background:#0f1320}
-    .thumb{width:54px;height:54px;border-radius:10px;object-fit:cover;background:#0b0d12;border:1px solid var(--line)}
-    pre{white-space:pre-wrap;background:#0f1320;border:1px dashed #2a3046;border-radius:12px;padding:10px;color:#a9b1c9;max-height:140px;overflow:auto}
-    a{color:var(--ink)}
-  </style>
-  <!-- libs -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-  <!-- Firebase compat SDKs -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
+  <title>Exportar — Gastos 2N</title>
+  <link rel="stylesheet" href="assets/style.css"/>
   <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-storage-compat.js"></script>
+  <script src="assets/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
 </head>
 <body>
-  <header class="top">
-    <button class="btn" onclick="history.back()">← Volver</button>
+  <header class="topbar">
     <h1>Exportar</h1>
-    <span id="who" class="muted" style="margin-left:auto">…</span>
+    <a class="btn" href="index.html">Volver</a>
+    <span class="badge" style="margin-left:auto" id="whoami">...</span>
   </header>
-
-  <main class="wrap">
-    <section class="card">
-      <div class="row">
-        <div>
-          <label>Mes</label><br>
-          <input id="ym" type="month">
-        </div>
+  <main class="content">
+    <div class="panel grid2">
+      <div class="field"><label>Mes</label><input id="ym" type="month"/></div>
+      <div class="field" style="align-items:flex-start;gap:8px">
         <button id="btnXLSX" class="btn primary">📄 Plantilla 2N (XLSX)</button>
         <button id="btnPhotos" class="btn">🖼️ Fotos (múltiples)</button>
       </div>
-      <p class="muted">Descarga de fotos como múltiples archivos (sin ZIP). El Excel incluye hoja <b>GASTOS</b> y <b>KM</b> y celda con <b>Km totales coche</b>.</p>
-    </section>
-
-    <section class="card">
-      <h3 style="margin:4px 0 8px">Dashboard</h3>
-      <canvas id="donut"></canvas>
-    </section>
-
-    <section class="card">
-      <h3 style="margin:4px 0 8px">Listado del mes</h3>
+    </div>
+    <div class="panel">
+      <strong>Dashboard</strong>
+      <canvas id="chart" height="260"></canvas>
+      <hr class="sep"/>
       <div id="list" class="list"></div>
-    </section>
-
-    <section class="card">
-      <h3 style="margin:4px 0 8px">Logs</h3>
-      <pre id="log"></pre>
-      <ul class="muted" style="margin:0">
-        <li>Si ves “no permission” revisa que estés logueado y las reglas de Storage permitan <code>get</code> del propio UID.</li>
-      </ul>
-    </section>
+    </div>
+    <div class="panel"><strong>Logs</strong><pre id="log" class="small"></pre></div>
   </main>
-
-<script>
-(function(){
-  const $=id=>document.getElementById(id);
-  const log=m=>{$('log').textContent += (typeof m==='string'?m:JSON.stringify(m,null,2))+'\\n';};
-
-  // Firebase
-  const firebaseConfig={
-    apiKey:"AIzaSyBTK8altmAR-fWqR9BjE74gEGavuiqk1Bs",
-    authDomain:"gastos-2n.firebaseapp.com",
-    projectId:"gastos-2n",
-    storageBucket:"gastos-2n.firebasestorage.app",
-    messagingSenderId:"55010048795",
-    appId:"1:55010048795:web:4fb48d1e0f9006ebf7b1be"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const auth=firebase.auth();
-  const db=firebase.firestore();
-  const st=firebase.storage();
-
-  auth.onAuthStateChanged(u=>{
-    $('who').textContent = u? (u.email||u.uid) : 'No autenticado';
-  });
-
-  function monthRange(ym){ const s=new Date(ym+'-01T00:00:00'); const e=new Date(s.getFullYear(), s.getMonth()+1, 1); return [s,e]; }
-  async function listEntries(ym, uid){
-    const [s,e]=monthRange(ym);
-    const q=await db.collection(`users/${uid}/entries`).where('date','>=',s).where('date','<',e).orderBy('date','asc').get();
-    return q.docs.map(d=>({id:d.id, ...d.data()}));
-  }
-  async function listKm(ym, uid){
-    const [s,e]=monthRange(ym);
-    const q=await db.collection(`users/${uid}/km`).where('date','>=',s).where('date','<',e).orderBy('date','asc').get();
-    return q.docs.map(d=>({id:d.id, ...d.data()}));
-  }
-
-  const CATS=['comida','gasolina','peajes','alojamiento','transporte','ocio','servicios','varios'];
-  const CAT_LABEL={comida:'Comida',gasolina:'Gasolina',peajes:'Peajes',alojamiento:'Hotel',transporte:'Transportes',ocio:'Invitaciones',servicios:'Servicios',varios:'Varios'};
-
-  function renderList(entries){
-    const host=$('list'); host.innerHTML='';
-    for(const e of entries){
-      const d=e.date?.toDate?e.date.toDate():new Date(e.date);
-      const el=document.createElement('div'); el.className='item';
-      el.innerHTML=`<img class="thumb" src="${e.photoURL||''}" alt="">
-        <div style="flex:1">
-          <div style="font-weight:600">${e.provider||'—'} · ${ (Number(e.amount||0)).toFixed(2)} €</div>
-          <div class="muted" style="font-size:12px">${d.toLocaleDateString('es-ES')} · ${CAT_LABEL[e.category]||'Varios'}</div>
-        </div>`;
-      host.appendChild(el);
+  <script>
+  (function(){
+    const {auth,db,st}=App; AfterRedirect(); requireAuth(u=>{ init(u) });
+    const log=(m)=>{ const el=document.querySelector('#log'); el.textContent += (typeof m==='string'?m:JSON.stringify(m))+"\n"; };
+    function monthRange(ym){ const s=new Date(ym+'-01T00:00:00'); const e=new Date(s.getFullYear(), s.getMonth()+1, 1); return [s,e]; }
+    async function listEntriesMonth(ym, uid){
+      const [s,e]=monthRange(ym);
+      const snap=await db.collection(`users/${uid}/entries`).where('date','>=',s).where('date','<',e).orderBy('date','asc').get();
+      return snap.docs.map(d=>({ id:d.id, ...d.data() }));
     }
-  }
-
-  function renderDonut(entries){
-    const byCat={}; CATS.forEach(c=>byCat[c]=0);
-    for(const e of entries){ if(e.category==='ingreso') continue; byCat[e.category||'varios'] += Number(e.amount||0); }
-    const data=Object.values(byCat); const labels=CATS.map(c=>CAT_LABEL[c]);
-    const ctx=$('donut').getContext('2d');
-    if(window.__chart){window.__chart.destroy();}
-    window.__chart=new Chart(ctx,{type:'doughnut',data:{labels,datasets:[{data}]},options:{plugins:{legend:{labels:{color:'#cdd3e4'}}}}});
-  }
-
-  // Descargar fotos (múltiples)
-  $('btnPhotos').onclick=async()=>{
-    try{
-      const u=auth.currentUser; if(!u) return alert('Haz login');
-      const ym=$('ym').value; if(!ym) return alert('Selecciona mes');
-      const entries=await listEntries(ym,u.uid);
-      const photos=entries.filter(e=>e.photoPath||e.photoURL);
-      if(!photos.length) return alert('No hay fotos en este mes');
-      let ok=0, fail=0;
-      for(const e of photos){
-        try{
-          const ref = e.photoPath ? st.ref(e.photoPath) : st.refFromURL(e.photoURL);
-          const url= await ref.getDownloadURL();
-          const a=document.createElement('a'); a.href=url; a.download='';
-          document.body.appendChild(a); a.click(); a.remove();
-          ok++;
-        }catch(err){ fail++; log({fallo_foto:e.photoPath||e.photoURL, err:err.message}); }
+    function groupCategories(entries){
+      const map={{comida:0,gasolina:0,peajes:0,alojamiento:0,transporte:0,ocio:0,servicios:0,varios:0}};
+      for(const e of entries){ if(e.category!=='ingreso') map[e.category||'varios']=(map[e.category||'varios']||0)+Number(e.amount||0); }
+      return map;
+    }
+    function renderList(entries){
+      const box=$id('list'); box.innerHTML='';
+      for(const e of entries){
+        const d=e.date?.toDate?e.date.toDate():new Date(e.date);
+        const div=document.createElement('div'); div.className='card';
+        div.innerHTML=`<img src="${e.photoURL||''}" onerror="this.style.display='none'"/>
+        <div><div><strong>${e.provider||'-'}</strong> <span class="small">${d.toLocaleDateString('es-ES')}</span></div>
+        <div class="small">${e.category} · ${Number(e.amount||0).toFixed(2)} €</div></div>`;
+        box.appendChild(div);
       }
-      log(`📸 Descargas: ${ok} ok, ${fail} fallos`);
-    }catch(e){ alert(e.message||e); }
-  };
-
-  // XLSX plantilla
-  $('btnXLSX').onclick=async()=>{
-    try{
-      if(typeof XLSX==='undefined') throw new Error('XLSX no está cargado');
-      const u=auth.currentUser; if(!u) return alert('Haz login');
-      const ym=$('ym').value; if(!ym) return alert('Selecciona mes');
-
-      const [entries, kms]= await Promise.all([listEntries(ym,u.uid), listKm(ym,u.uid)]);
-
-      // Hoja GASTOS (formato 2N simplificado)
-      const rows=[["DATE","CLIENT / PROVIDER","TOLLS & PARKINGS","HOTEL","GASOLINE","OTHER TRANSPORTS (Taxi)","INVITATIONS","MEALS","VARIOUS","TOTAL","DESCRIPTION"]];
-      const map={peajes:2,alojamiento:3,gasolina:4,transporte:5,ocio:6,comida:7,varios:8};
+    }
+    function renderChart(map){
+      const ctx=$id('chart');
+      const labels={{comida:'Comida',gasolina:'Gasolina',peajes:'Peajes',alojamiento:'Hotel',transporte:'Transportes',ocio:'Invitaciones',servicios:'Servicios',varios:'Varios'}};
+      const data={{labels:Object.values(labels), datasets:[{{label:'Gastos', data:Object.keys(labels).map(k=>map[k]||0)}}]}};
+      if(window._ch) window._ch.destroy();
+      window._ch = new Chart(ctx, {{ type:'doughnut', data }});
+    }
+    async function init(user){
+      const def=new Date().toISOString().slice(0,7); $id('ym').value=def;
+      await refresh();
+      $id('ym').addEventListener('change', refresh);
+      $id('btnPhotos').onclick=downloadPhotos;
+      $id('btnXLSX').onclick=exportXLSX;
+    }
+    async function refresh(){
+      const user=auth.currentUser; if(!user) return;
+      const ym=$id('ym').value;
+      const entries=await listEntriesMonth(ym,user.uid);
+      renderList(entries);
+      renderChart(groupCategories(entries));
+      window._entries=entries;
+    }
+    async function downloadPhotos(){
+      const entries=(window._entries||[]).filter(e=>e.photoURL);
+      if(!entries.length) return alert('Sin fotos');
+      for(const e of entries){
+        try{
+          const url = e.photoURL; // public download via token
+          const a=document.createElement('a'); a.href=url; a.download=''; document.body.appendChild(a); a.click(); a.remove();
+        }catch(err){ log({fallo_foto:e.photoURL, err:err.message||String(err)}); }
+      }
+    }
+    function to2(n){ return (isFinite(n)?Number(n):0).toFixed(2).replace('.',','); }
+    function buildRows2N(entries){
+      const C=["DATE","CLIENT / PROVIDER","TOLLS & PARKINGS","HOTEL","GASOLINE","TICKETS TRAVELING","OTHER TRANSPORTS (Taxi)","INVITATIONS","MEALS","VARIOUS","TOTAL","DESCRIPTION"];
+      const map={{comida:'MEALS',transporte:'OTHER TRANSPORTS (Taxi)',servicios:'VARIOUS',ocio:'INVITATIONS',gasolina:'GASOLINE',peajes:'TOLLS & PARKINGS',alojamiento:'HOTEL',varios:'VARIOUS'}};
+      const rows=[C];
       for(const e of entries){
         if(e.category==='ingreso') continue;
+        const rec={{}}; C.forEach(k=>rec[k]=(k in {{'DATE':0,'CLIENT / PROVIDER':0,'DESCRIPTION':0}}?'':'0,00'));
         const d=e.date?.toDate?e.date.toDate():new Date(e.date);
-        const r=Array(rows[0].length).fill(0);
-        r[0]= d.toLocaleDateString('es-ES');
-        r[1]= e.provider||"";
-        r[10]= e.notes||"";
-        const idx= map[e.category||'varios'] ?? 8;
-        const n= Number(e.amount||0);
-        r[idx]= n;
-        r[9]= n;
-        rows.push(r);
+        rec['DATE']=d.toLocaleDateString('es-ES');
+        rec['CLIENT / PROVIDER']=e.provider||'';
+        rec['DESCRIPTION']=e.notes||'';
+        const col=map[e.category]||'VARIOUS'; if(col) rec[col]=to2(e.amount||0);
+        let tot=0; ['TOLLS & PARKINGS','HOTEL','GASOLINE','TICKETS TRAVELING','OTHER TRANSPORTS (Taxi)','INVITATIONS','MEALS','VARIOUS'].forEach(k=>tot+=Number((rec[k]||'0').replace(',','.')));
+        rec['TOTAL']=to2(tot);
+        rows.push(C.map(k=>rec[k]));
       }
-      const wsG = XLSX.utils.aoa_to_sheet(rows);
-
-      // Hoja KM
-      const kmHead=[["Fecha","Destino","Km empresa","Km personales","€/L","Km totales coche","Coste personal (Km pers × €/L)"]];
-      let carTotal=0;
-      const kmRows=[...kmHead];
-      for(const k of kms){
-        const d=k.date?.toDate?k.date.toDate():new Date(k.date);
-        carTotal = Math.max(carTotal, Number(k.carOdometer||0)); // odómetro mayor visto
-        const cost = Number(k.kmPersonal||0) * Number(k.pricePerL||0);
-        kmRows.push([ d.toLocaleDateString('es-ES'), k.dest||"", Number(k.kmBusiness||0), Number(k.kmPersonal||0), Number(k.pricePerL||0), Number(k.carOdometer||0), Number(cost.toFixed(2)) ]);
-      }
-      const wsK = XLSX.utils.aoa_to_sheet(kmRows);
-      XLSX.utils.sheet_add_aoa(wsK, [["","", "", "", "", "Km totales coche (máx):", carTotal]], {origin:-1});
-
-      const wb=XLSX.utils.book_new();
-      XLSX.utils.book_append_sheet(wb, wsG, "GASTOS");
-      XLSX.utils.book_append_sheet(wb, wsK, "KM");
-      const fname = `Informe_Gastos_${ym}.xlsx`;
-      const wbout = XLSX.write(wb, {bookType:'xlsx', type:'array'});
-      saveAs(new Blob([wbout], {type:'application/octet-stream'}), fname);
-    }catch(e){ console.error(e); alert(e.message||e); }
-  };
-
-  // cargar por defecto y pintar widgets
-  window.addEventListener('DOMContentLoaded', async ()=>{
-    $('ym').value = new Date().toISOString().slice(0,7);
-    auth.onAuthStateChanged(async (u)=>{
-      if(!u) return;
-      const ym=$('ym').value;
-      const entries=await listEntries(ym,u.uid);
-      renderList(entries);
-      renderDonut(entries);
-    });
-    $('ym').addEventListener('change', async ()=>{
-      const u=auth.currentUser; if(!u) return;
-      const entries=await listEntries($('ym').value,u.uid);
-      renderList(entries);
-      renderDonut(entries);
-    });
-  });
-})();
-</script>
+      return rows;
+    }
+    function exportXLSX(){
+      try{
+        const entries = window._entries||[];
+        if(!entries.length) return alert('Sin datos');
+        const ws = XLSX.utils.aoa_to_sheet(buildRows2N(entries));
+        const wb = XLSX.utils.book_new();
+        XLSX.utils.book_append_sheet(wb, ws, 'Gastos 2N');
+        const out = XLSX.write(wb, {{bookType:'xlsx', type:'array'}});
+        saveAs(new Blob([out], {{type:'application/octet-stream'}}), `Informe_Gastos_${$id('ym').value}.xlsx`);
+      }catch(e){ alert('XLSX error: '+(e.message||e)); }
+    }
+  })();
+  </script>
 </body>
 </html>
